--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "axios": "^1.6.7",
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.9"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0"
